<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgscreen"
        android:layoutDirection="ltr">

        <include
            android:id="@+id/lyToolBar"
            layout="@layout/layout_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lyToolBar"
            android:scrollbars="none">

            <android.support.v7.widget.CardView
                android:id="@+id/cvAddTicket"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_40"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_3"
                app:cardElevation="@dimen/margin_3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingRight="@dimen/margin_10">

                    <Button
                        android:id="@+id/btnSkip"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_40"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_25"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:background="@color/txt_fees_apply"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/lbl_skip"
                        android:textColor="@color/white"/>


                    <TextView
                        android:id="@+id/tvInstructions1"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/str_pairing_instructions1"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:layout_below="@+id/btnSkip" />

                    <TextView
                        android:id="@+id/tvInstructions2"
                        style="@style/Base.TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvInstructions1"
                        android:layout_marginTop="@dimen/margin_10"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/str_pairing_instructions2"
                        android:layout_marginLeft="@dimen/margin_10"/>


                    <Button
                        android:id="@+id/btnConnect"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_40"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_25"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_weight="1"
                        android:background="@drawable/gradient_btn_bg"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/lbl_connect"
                        android:textColor="@color/white"
                        android:layout_below="@+id/tvInstructions2"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>


    </RelativeLayout>
</layout>
