<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bgscreen"
        android:layoutDirection="ltr">

        <include
            android:id="@+id/lyToolBar"
            layout="@layout/layout_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/lyToolBar"
            android:scrollbars="none">

            <android.support.v7.widget.CardView
                android:id="@+id/cvAddTicket"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_3"
                app:cardElevation="@dimen/margin_3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <TextView
                        android:id="@+id/tvQuestion1"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/str_question1"
                        android:layout_marginLeft="@dimen/margin_10" />


                    <Button
                        android:id="@+id/btnYes1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:text="@string/str_yes"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_below="@+id/tvQuestion1"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_10"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:layout_marginLeft="@dimen/margin_30"/>

                    <Button
                        android:id="@+id/btnNo1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:text="@string/str_no"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_toRightOf="@+id/btnYes1"
                        android:layout_below="@+id/tvQuestion1"
                        android:layout_marginTop="@dimen/margin_10"/>

                    <TextView
                        android:id="@+id/tvQuestion2"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnYes1"
                        android:layout_marginTop="@dimen/margin_10"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/str_question2"
                        android:layout_marginLeft="@dimen/margin_10"/>

                    <Button
                        android:id="@+id/btnYes2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:text="@string/str_yes"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_below="@+id/tvQuestion2"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_10"
                        android:layout_marginLeft="@dimen/margin_30"/>

                    <Button
                        android:id="@+id/btnNo2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/str_no"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_toRightOf="@+id/btnYes2"
                        android:layout_below="@+id/tvQuestion2"
                        android:layout_marginTop="@dimen/margin_10"/>

                    <TextView
                        android:id="@+id/tvQuestion3"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnYes2"
                        android:layout_marginTop="@dimen/margin_10"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/str_question3"
                        android:layout_marginLeft="@dimen/margin_10"/>

                    <Button
                        android:id="@+id/btnYes3"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:text="@string/str_yes"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_below="@+id/tvQuestion3"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_10"
                        android:layout_marginLeft="@dimen/margin_30"/>

                    <Button
                        android:id="@+id/btnNo3"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:text="@string/str_no"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_toRightOf="@+id/btnYes3"
                        android:layout_below="@+id/tvQuestion3"
                        android:layout_marginTop="@dimen/margin_10"/>

                    <TextView
                        android:id="@+id/tvQuestion4"
                        style="@style/Base.TextAppearance.AppCompat.Large"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/btnYes3"
                        android:layout_marginTop="@dimen/margin_10"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/str_question4"
                        android:layout_marginLeft="@dimen/margin_10"/>

                    <Button
                        android:id="@+id/btnYes4"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:text="@string/str_yes"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_below="@+id/tvQuestion4"
                        android:layout_marginTop="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_10"
                        android:layout_marginLeft="@dimen/margin_30"/>

                    <Button
                        android:id="@+id/btnNo4"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_30"
                        android:text="@string/str_no"
                        android:background="@drawable/rounded_btn_bg"
                        android:layout_toRightOf="@+id/btnYes4"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:layout_below="@+id/tvQuestion4"
                        android:layout_marginTop="@dimen/margin_10"/>


                    <Button
                        android:id="@+id/btnDone"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_40"
                        android:layout_marginLeft="@dimen/margin_20"
                        android:layout_marginTop="@dimen/margin_25"
                        android:layout_marginRight="@dimen/margin_20"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_weight="1"
                        android:background="@drawable/btn_img"
                        android:fontFamily="@font/blanch_caps"
                        android:textSize="@dimen/def_font_size"
                        android:text="@string/lbl_done"
                        android:textColor="@color/colortext"
                        android:layout_below="@+id/btnYes4"
                        android:layout_alignParentRight="true"/>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/btnDone"
                        android:layout_marginBottom="@dimen/margin_10"
                        android:layout_marginRight="@dimen/margin_5"
                        android:layout_marginLeft="@dimen/margin_5"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/margin_3"
                        app:cardElevation="@dimen/margin_3">



                    </android.support.v7.widget.CardView>




                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>


    </RelativeLayout>
</layout>
